# OSINT-tool

./: .dockerignore  Dockerfile  LICENSE  README.md  README_FINAL.md  pyproject.toml
.claude/: launch.json
.github/workflows/: api_test.yml  ci.yml
backend/: cli.py  main.py  requirements.txt
backend/core/: analyzer.py
backend/modules/: crawler.py  dir_bruteforce.py  domain.py  email.py  js_endpoints.py  risk_engine.py  scan.py  screenshot.py  security.py  tech.py  username.py
backend/services/: orchestrator.py  orchestrator_async.py  orchestrator_elite.py  orchestrator_pro.py  orchestrator_v2.py
docs/superpowers/plans/: 2026-07-16-osint-phase2a-sse-dashboard.md  2026-07-16-osint-phase2b-enrichment.md  2026-07-16-osint-recon-core-cli.md
docs/superpowers/specs/: 2026-07-16-osint-phase2a-sse-dashboard-design.md  2026-07-16-osint-phase2b-enrichment-design.md  2026-07-16-osint-recon-core-cli-design.md
osint/: api.py  cli.py  graph.py  summary.py
osint-dashboard/: README.md
osint-dashboard/backend/: main.py  requirements.txt
osint-dashboard/backend/core/: config.py
osint-dashboard/backend/models/: schemas.py
osint-dashboard/backend/routes/: analyze.py
osint-dashboard/backend/services/: ai_summary.py  domain_osint.py  email_osint.py  graph_builder.py  input_analyzer.py  username_osint.py
osint-dashboard/backend/tests/: test_routes.py  test_services.py
osint-dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
osint-dashboard/frontend/src/: App.tsx  styles.css
osint-dashboard/frontend/src/components/: ModuleProgress.tsx  RiskGauge.tsx  SectionCard.tsx
osint-dashboard/frontend/src/graph/: GraphView.tsx
osint-dashboard/frontend/src/pages/: InputPage.tsx  ResultsPage.tsx
osint/core/: classify.py  models.py  orchestrator.py  settings.py
osint/data/: wordlist.txt
osint/modules/: base.py  breach.py  crawler.py  dir_bruteforce.py  dns_records.py  email.py  headers.py  js_endpoints.py  ports.py  registry.py  risk.py  screenshot.py  subdomains.py  tech.py  username.py
osint/reporting/: html_report.py  json_report.py  markdown_report.py
tests/: test_api.py  test_base.py  test_breach.py  test_classify.py  test_cli.py  test_dns_dir_modules.py  test_graph.py  test_http_modules.py  test_models.py  test_orchestrator.py  test_ports_username_email.py  test_reporting.py  test_risk.py  test_screenshot.py  test_summary.py
(+2 files in other folders)
