[project]
name = "osint"
version = "1.0.0"
description = "OSINT reconnaissance engine — no paid API required"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "dnspython>=2.6",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
osint = "osint.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["osint"]

[tool.hatch.build.targets.wheel.force-include]
"osint/data/wordlist.txt" = "osint/data/wordlist.txt"
