[project]
name = "osint"
version = "1.0.0"
description = "OSINT reconnaissance engine — no paid API required"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AMREESHAYS", email = "amreesh192006@gmail.com" }]
keywords = ["osint", "reconnaissance", "security", "bug-bounty", "recon", "cli", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "dnspython>=2.6",
    "selectolax>=0.3.21",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]
ai = ["anthropic>=0.40"]
screenshots = ["playwright>=1.44"]

[project.scripts]
osint = "osint.cli:app"

[project.urls]
Homepage = "https://github.com/AMREESHAYS/OSINT-tool"
Repository = "https://github.com/AMREESHAYS/OSINT-tool"
Issues = "https://github.com/AMREESHAYS/OSINT-tool/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["osint"]

[tool.hatch.build.targets.wheel.force-include]
"osint/data/wordlist.txt" = "osint/data/wordlist.txt"
